2-index.html added

--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -18,21 +18,15 @@
             height: 70px;
             width: 100%;
         }
-
-        main {
-            flex-grow: 1;
-        }
-
         footer {
             background-color: #00FF00;
             height: 60px;
             width: 100vw;
             display: flex;
-            place-content: center;
-        }
-
-        p {
-            color: #000;
+            justify-content: center;
+            align-items: center;
+            bottom: 0;
+            position: absolute;
             text-align: center;
         }
     </style>
@@ -41,11 +35,9 @@
     <header>
 
     </header>
-    <main>
 
-    </main>
     <footer>
-        <p>Best School</p>
+       Best School
     </footer>
 </body>
 </html>
