--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -9,11 +9,8 @@
     <header style="background-color: #FF0000; height: 70px; width: 100%;">
 
     </header>
-    <main style="flex-grow: 1;">
-
-    </main>
-    <footer style="background-color:#00FF00; height: 60px; width: 100vw;  display: flex; justify-content: center; align-items: center;">
-        <p style="color: #000; text-align: center;">Best School</p>
+    <footer style="background-color:#00FF00; height: 60px; width: 100vw;  display: flex; justify-content: center; align-items: center; text-align: center; bottom: 0; position: absolute;">
+        Best School
     </footer>
 </body>
 </html>
